Fixing vertical alignement of filters fields on firefox

--- a/src/Ico/Bundle/AppBundle/Resources/public/css/base.css
+++ b/src/Ico/Bundle/AppBundle/Resources/public/css/base.css
@@ -153,6 +153,7 @@ mark {
 .form_row.form-group {
     display: inline-block;
     margin-right: 20px;
+    vertical-align: top;
 }
 .select-multiple-wrapper {
     display: inline-block;
